src/tests/testfiles/function-calls/5.txt
testfiles/function-calls/5.c:8:25: error: parameter 6 of 'f' expected 'int' but got 'float *'
f('z', a, *b, &a, &b, b);
                      ^
